--- a/react--birthday-records-bd0c718iot3/src/index.css
+++ b/react--birthday-records-bd0c718iot3/src/index.css
@@ -18,3 +18,8 @@ body {
     display: flex;
     justify-content: center;
 }
+
+.person-info {
+    display: flex;
+    justify-content: space-between;
+}
